fix: dark mode

--- a/src/packages/calendar/demo.scss
+++ b/src/packages/calendar/demo.scss
@@ -50,7 +50,6 @@
 
   .desc {
     padding: 10px;
-    background-color: #f9f9f9;
   }
 
   .desc1 {
