--- a/src/packages/input/input.scss
+++ b/src/packages/input/input.scss
@@ -6,7 +6,6 @@
   width: 100%;
   padding: $input-padding;
   line-height: 24px;
-  background: $white;
   font-size: $input-font-size;
   box-sizing: border-box;
   border-bottom: $input-border-bottom-width solid $input-border-bottom;
@@ -19,7 +18,6 @@
     width: 100%;
     color: $color-title;
     flex: 1;
-    background-color: transparent;
     padding: 0;
     border: 0;
     outline: 0 none;
