--- a/src/packages/textarea/textarea.scss
+++ b/src/packages/textarea/textarea.scss
@@ -3,7 +3,7 @@
   width: 100%;
   box-sizing: border-box;
   display: flex;
-  background: $white;
+  // background: $white;
   font-size: $textarea-font;
   padding: $textarea-padding;
 
